infra/prod-k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.bid-a-ride.kikoc.site
    - api.bid-a-ride.kikoc.site
    - id.bid-a-ride.kikoc.site
    secretName: bid-a-ride-tls
  rules:
  - host: app.bid-a-ride.kikoc.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-clusterip
            port: 
              number: 3000
  - host: api.bid-a-ride.kikoc.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateway-clusterip
            port: 
              number: 80
  - host: id.bid-a-ride.kikoc.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: identity-clusterip
            port: 
              number: 80
